--- a/frontend/paper_story_app/src/styles/SearchBar.css
+++ b/frontend/paper_story_app/src/styles/SearchBar.css
@@ -1,4 +1,22 @@
-.search_result {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer components {
+    .search {
+        @apply lg:flex hidden w-full max-w-[500px];
+    }
+
+    .search__input {
+        @apply border-2 border-gray-500 px-6 py-2 w-full;
+    }
+
+    .search__icon {
+        @apply bg-gray-500 text-white text-[26px] grid place-items-center px-4;
+    }
+}
+
+.search__result {
     background: white;
     width: 400px;
     margin-top: 10px;
@@ -6,11 +24,11 @@
     top: 70px;
 }
 
-.search_result::-webkit-scrollbar {
+.search__result::-webkit-scrollbar {
     display: none;
 }
 
-.search_suggestion_line,
+.search__suggestion-line,
 .search_loading {
     padding: 10px 20px;
     cursor: pointer;
@@ -18,6 +36,6 @@
     display: block;
 }
 
-.search_suggestion_line:hover {
+.search__suggestion-line:hover {
     background: rgb(227, 227, 227);
 }
